--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -147,6 +147,7 @@
       <Filter>StudyPlan</Filter>
     </ClCompile>
     <ClCompile Include="Utils\Utils.cpp" />
+    <ClCompile Include="Actions\ActionSavePlan.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -231,6 +232,8 @@
       <Filter>StudyPlan</Filter>
     </ClInclude>
     <ClInclude Include="Utils\Utils.h" />
+    <ClInclude Include="Actions\ActionSavePlan.h" />
+    <ClInclude Include="Actions\allActions.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
