--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -148,6 +148,7 @@
     </ClCompile>
     <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="Actions\ActionSavePlan.cpp" />
+    <ClCompile Include="Actions\ActionDeleteCourse.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -234,6 +235,7 @@
     <ClInclude Include="Utils\Utils.h" />
     <ClInclude Include="Actions\allActions.h" />
     <ClInclude Include="Actions\ActionSavePlan.h" />
+    <ClInclude Include="Actions\ActionDeleteCourse.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
