--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -149,6 +149,7 @@
     <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="Actions\ActionSavePlan.cpp" />
     <ClCompile Include="Actions\ActionDeleteCourse.cpp" />
+    <ClCompile Include="Actions\ActionAddNotes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -236,6 +237,7 @@
     <ClInclude Include="Actions\allActions.h" />
     <ClInclude Include="Actions\ActionSavePlan.h" />
     <ClInclude Include="Actions\ActionDeleteCourse.h" />
+    <ClInclude Include="Actions\ActionAddNotes.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
