--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -151,6 +151,7 @@
     <ClCompile Include="Actions\ActionDeleteCourse.cpp" />
     <ClCompile Include="Actions\ActionAddNotes.cpp" />
     <ClCompile Include="Actions\ActionImportPlan.cpp" />
+    <ClCompile Include="Actions\ActionEraseAll.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -240,6 +241,7 @@
     <ClInclude Include="Actions\ActionDeleteCourse.h" />
     <ClInclude Include="Actions\ActionAddNotes.h" />
     <ClInclude Include="Actions\ActionImportPlan.h" />
+    <ClInclude Include="Actions\ActionEraseAll.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
