--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -155,6 +155,7 @@
     <ClCompile Include="Actions\ActionMoveCourse.cpp" />
     <ClCompile Include="Actions\ActionCourseInfo.cpp" />
     <ClCompile Include="Actions\ActionChangeCode.cpp" />
+    <ClCompile Include="Actions\ActionDeclareMajor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -248,6 +249,7 @@
     <ClInclude Include="Actions\ActionMoveCourse.h" />
     <ClInclude Include="Actions\ActionCourseInfo.h" />
     <ClInclude Include="Actions\ActionChangeCode.h" />
+    <ClInclude Include="Actions\ActionDeclareMajor.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
