alot of stuff happend
feature 30 and 31 are done the drag and drop now is way way way better and the courses are far from eachother
feature 31 is activted by the major button and feature 30 by the swap.

--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -157,6 +157,8 @@
     <ClCompile Include="Actions\ActionChangeCode.cpp" />
     <ClCompile Include="Actions\ActionDeclareMajor.cpp" />
     <ClCompile Include="Actions\ActionDragAndDrop.cpp" />
+    <ClCompile Include="Actions\ActionCourseDependancies.cpp" />
+    <ClCompile Include="Actions\ActionDDOOC.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -252,6 +254,8 @@
     <ClInclude Include="Actions\ActionChangeCode.h" />
     <ClInclude Include="Actions\ActionDeclareMajor.h" />
     <ClInclude Include="Actions\ActionDragAndDrop.h" />
+    <ClInclude Include="Actions\ActionCourseDependancies.h" />
+    <ClInclude Include="Actions\ActionDDOOC.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
