--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -159,6 +159,7 @@
     <ClCompile Include="Actions\ActionDragAndDrop.cpp" />
     <ClCompile Include="Actions\ActionCourseDependancies.cpp" />
     <ClCompile Include="Actions\ActionDDOOC.cpp" />
+    <ClCompile Include="Actions\ActionCalculateGPA.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -256,6 +257,7 @@
     <ClInclude Include="Actions\ActionDragAndDrop.h" />
     <ClInclude Include="Actions\ActionCourseDependancies.h" />
     <ClInclude Include="Actions\ActionDDOOC.h" />
+    <ClInclude Include="Actions\ActionCalculateGPA.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
