icons added to the new window, filtering done

--- a/SPOT/SPOT.vcxproj.filters
+++ b/SPOT/SPOT.vcxproj.filters
@@ -160,6 +160,7 @@
     <ClCompile Include="Actions\ActionCourseDependancies.cpp" />
     <ClCompile Include="Actions\ActionDDOOC.cpp" />
     <ClCompile Include="Actions\ActionCalculateGPA.cpp" />
+    <ClCompile Include="Actions\ActionFilter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI\GUI.h">
@@ -258,6 +259,7 @@
     <ClInclude Include="Actions\ActionCourseDependancies.h" />
     <ClInclude Include="Actions\ActionDDOOC.h" />
     <ClInclude Include="Actions\ActionCalculateGPA.h" />
+    <ClInclude Include="Actions\ActionFilter.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="GUI\CMUgraphicsLib\Manual.txt">
