--- a/SPOT/SPOT.vcxproj
+++ b/SPOT/SPOT.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Actions\ActionCourseInfo.cpp" />
     <ClCompile Include="Actions\ActionDDOOC.cpp" />
     <ClCompile Include="Actions\ActionEraseAll.cpp" />
+    <ClCompile Include="Actions\ActionFilter.cpp" />
     <ClCompile Include="Actions\ActionImportPlan.cpp" />
     <ClCompile Include="Actions\ActionAddNotes.cpp" />
     <ClCompile Include="Actions\ActionDeleteCourse.cpp" />
@@ -184,6 +185,7 @@
     <ClInclude Include="Actions\ActionChangeCode.h" />
     <ClInclude Include="Actions\ActionCourseInfo.h" />
     <ClInclude Include="Actions\ActionEraseAll.h" />
+    <ClInclude Include="Actions\ActionFilter.h" />
     <ClInclude Include="Actions\ActionImportPlan.h" />
     <ClInclude Include="Actions\ActionAddNotes.h" />
     <ClInclude Include="Actions\ActionDeleteCourse.h" />
